--- a/apps/index.html
+++ b/apps/index.html
@@ -29,7 +29,7 @@
 
     // 「スタートボタン」を押下で、getUserMedia を使って映像を「映像表示エリア」に表示するよ。
     $start.addEventListener('click', () => {
-        navigator.mediaDevices.getUserMedia({ video: true, audio: false })
+        navigator.mediaDevices.getUserMedia({ video: {facingMode: {exact: "environment"}}, audio: false })
         .then(stream => $video.srcObject = stream)
         .catch(err => alert(`${err.name} ${err.message}`));
     }, false);
