--- a/apps/index.html
+++ b/apps/index.html
@@ -87,6 +87,9 @@
         canvas_capture_image.width  = va.videoWidth;
         canvas_capture_image.height = va.videoHeight;
         cci.drawImage(va, 0, 0);  // canvasに『「静止画取得」ボタン』押下時点の画像を描画。
+
+        // base64
+        // alert(canvas_capture_image.toDataURL("image/jpeg"));
     }
 
 
